// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Input component It should match DOM Snapshot 1`] = `
<div>
  <label
    class="input-label"
    for="1"
  >
    Name
  </label>
  <div
    class="input-wrapper"
  >
    <input
      class="input undefined"
      id="1"
      name="name"
      placeholder="Please enter name"
      type="email"
      value="name"
    />
    <small
      class="err-msg"
    >
      error
    </small>
  </div>
</div>
`;

exports[`Test Input component It should render correctly with initial Props 1`] = `
<div>
  <label
    class="input-label"
    for="1"
  >
    Name
  </label>
  <div
    class="input-wrapper"
  >
    <input
      class="input undefined"
      id="1"
      name="name"
      type="text"
      value=""
    />
  </div>
</div>
`;
